--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -81,7 +81,7 @@
       id="user-style-rtl"
     />
     <link
-      href="../assets/css/user.min.css"
+      href="../assets/css/user.css"
       type="text/css"
       rel="stylesheet"
       id="user-style-default"
