--- a/views/patrol-report-submit.ejs
+++ b/views/patrol-report-submit.ejs
@@ -12,8 +12,8 @@
   </nav>
   <h2 class="mb-2 lh-sm">Submit Report</h2>
   <p class="text-700 lead mb-2">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae sem at
-    tellus finibus ornare eget eget massa.
+    Personnel submit patrol reports to document activities, incidents, and
+    safety concerns, ensuring accountability and security.
   </p>
 
   <div class="mt-4">
@@ -50,7 +50,7 @@
                       aria-controls="accordion-example-code"
                       aria-expanded="false"
                     >
-                      <span class="me-2" data-feather="code"></span>View</a
+                      <span class="me-2" data-feather="code"></span>Preview</a
                     ><a class="btn btn-sm btn-phoenix-primary preview-btn ms-2"
                       ><span class="me-2" data-feather="eye"></span>Close</a
                     >
@@ -62,20 +62,20 @@
               <!-- upper section -->
               <div class="collapse code-collapse" id="patrol-report">
                 <pre
-                  class="scrollbar bg-200 p-3"
+                  class="scrollbar bg-200"
                   style="max-height: 420px"
                 ><code class="code-to-copy">
-                          ELorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ornare pretium eros, quis mattis nisi sollicitudin
-                          in. Vestibulum vel urna congue, bibendum lacus a, dignissim elit. Morbi nec consequat massa. Proin dictum a urna quis
-                          pulvinar. Integer feugiat sapien lectus, quis aliquet lectus consectetur quis. Phasellus arcu leo, aliquet ac metus
-                          vitae, finibus hendrerit magna. Quisque auctor risus ut enim facilisis vestibulum. Ut accumsan tellus sit amet urna
-                          mattis malesuada. Donec in tellus nulla.
+                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor eget justo. Curabitur id fermentum neque. Nulla facilisi.
+                   Nunc vitae augue vel ex tincidunt ultricies. Duis nec tincidunt nisl. Vivamus id vehicula odio, eget lacinia risus. Aenean fringilla, 
+                   nunc ac tristique cursus, sem purus venenatis nunc, in dignissim dolor velit ac odio. Cras sollicitudin purus eu sapien facilisis, sit amet suscipit 
+                   nulla dignissim. Morbi nec varius quam, a consectetur justo. Pellentesque quis metus eget dui malesuada facilisis ac eu arcu. Vestibulum nec varius lectus. 
+                   Vivamus auctor quam nec tincidunt.
                 </code></pre>
               </div>
 
               <div class="p-4">
                 <!-- file uploader -->
-                <h1>Upload Files</h1>
+
                 <!-- data-options are the setting for dropzone can find the settings also inside -->
                 <form
                   class="dropzone dropzone-multiple p-0"
@@ -149,14 +149,21 @@
                     </div>
                   </div>
                 </form>
-                <button id="uploadButton">Upload Files</button>
+
+                <!-- button to be edited into submit -->
+                <!-- <button id="uploadButton" class="btn btn-primary">
+                  Upload Files
+                </button> -->
+
+                <button id="showToastButton" class="btn btn-primary">
+                  <div class="button-text">Show Toast</div>
+                </button>
 
                 <!-- form >form tag will be merge with file uploader form tag -->
                 <form
                   action="/patrol-report/submit"
                   method="post"
-                  class="row g-3 needs-validation"
-                  novalidate="novalidate"
+                  class="row g-3 has-validation"
                 >
                   <!-- form title report -->
                   <div class="col-md-4">
@@ -165,12 +172,13 @@
                     >
 
                     <select
-                      class="form-select"
+                      class="form-select <%= validationReportType %>"
                       id="validationCustom04"
-                      required=""
                       name="reportType"
                     >
-                      <option selected="" value="">Choose title report</option>
+                      <option selected="" value="<%= reportType %>">
+                        <%= reportType %>
+                      </option>
                       <option value="Unit Patrol Parameter">
                         Unit Patrol Parameter
                       </option>
@@ -193,13 +201,13 @@
                     >
 
                     <input
-                      class="form-control datetimepicker flatpickr-input"
+                      class="form-control <%= validationStartTime %> datetimepicker flatpickr-input"
                       id="timepicker1"
                       type="text"
                       placeholder="hour : minute"
                       data-options='{"enableTime":true,"noCalendar":true,"dateFormat":"H:i","disableMobile":true,"allowInput":true}'
-                      required="required"
                       name="startTime"
+                      value="<%= startTime %>"
                     />
                     <div class="valid-feedback">Looks good!</div>
                     <div class="invalid-feedback">
@@ -213,13 +221,13 @@
                     >
 
                     <input
-                      class="form-control datetimepicker flatpickr-input"
+                      class="form-control <%= validationEndTime %> datetimepicker flatpickr-input"
                       id="timepicker2"
                       type="text"
                       placeholder="hour : minute"
                       data-options='{"enableTime":true,"noCalendar":true,"dateFormat":"H:i","disableMobile":true,"allowInput":true}'
-                      required="required"
                       name="endTime"
+                      value="<%= endTime %>"
                     />
                     <div class="valid-feedback">Looks good!</div>
                     <div class="invalid-feedback">
@@ -231,13 +239,13 @@
                     <label class="form-label" for="datepicker2">Date</label>
 
                     <input
-                      class="form-control datetimepicker flatpickr-input"
+                      class="form-control <%= validationDate %> datetimepicker flatpickr-input"
                       id="datepicker2"
                       type="text"
                       placeholder="day / month / year"
                       data-options='{"dateFormat":"d/m/y","disableMobile":true,"allowInput":true}'
-                      required="required"
                       name="date"
+                      value="<%= date %>"
                     />
                     <div class="valid-feedback">Looks good!</div>
                     <div class="invalid-feedback">
@@ -251,12 +259,13 @@
                     >
 
                     <select
-                      class="form-select"
+                      class="form-select <%= validationLocation %>"
                       id="validationCustom05"
-                      required=""
                       name="location"
                     >
-                      <option selected="" value="">Choose location</option>
+                      <option selected="" value="<%= location %>">
+                        <%= location %>
+                      </option>
                       <option value="Baitul Makmur I">Baitul Makmur I</option>
                       <option value="Baitul Makmur II">Baitul Makmur II</option>
                       <option value="Jamek Mosque">Jamek Mosque</option>
@@ -276,13 +285,14 @@
                       >Patrol Summary Report</label
                     >
                     <textarea
-                      class="form-control"
+                      class="form-control <%= validationReportSummary %>"
                       id="floatingProjectDescription1"
                       placeholder="Leave a summary report here"
                       style="height: 128px"
-                      required="required"
                       name="reportSummary"
-                    ></textarea>
+                    >
+<%= reportSummary %></textarea
+                    >
                     <div class="valid-feedback">Looks good!</div>
                     <div class="invalid-feedback">
                       Please enter a report summary here.
@@ -294,13 +304,14 @@
                       >Notes</label
                     >
                     <textarea
-                      class="form-control"
+                      class="form-control <%= validationNotes %>"
                       id="floatingProjectDescription2"
                       placeholder="Leave a note here"
                       style="height: 64px"
-                      required="required"
                       name="notes"
-                    ></textarea>
+                    >
+<%= notes %></textarea
+                    >
                     <div class="valid-feedback">Looks good!</div>
                     <div class="invalid-feedback">
                       Please enter a note here.
@@ -309,7 +320,11 @@
 
                   <!-- Submit button -->
                   <div class="col-12">
-                    <button class="btn btn-primary" type="submit">
+                    <button
+                      id="uploadButton"
+                      class="btn btn-primary"
+                      type="submit"
+                    >
                       Submit form
                     </button>
                   </div>
@@ -352,11 +367,43 @@
       <div class="d-flex">
         <div class="toast-body p-3"></div>
         <button
-          class="btn-close btn-close-white me-2 m-auto"
+          class="btn ms-2 p-0 btn-close-white"
           type="button"
           data-bs-dismiss="toast"
           aria-label="Close"
-        ></button>
+        >
+          <span class="uil uil-times fs-1"></span>
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 5">
+    <div class="d-flex">
+      <div
+        class="toast align-items-center text-white bg-primary border-0 light"
+        role="alert"
+        data-bs-autohide="false"
+        aria-live="assertive"
+        aria-atomic="true"
+        id="alertToast"
+      >
+        <div class="d-flex">
+          <div class="toast-body p-3">
+            <code class="text-white"
+              >Hello there this is toast notification</code
+            >
+          </div>
+
+          <button
+            class="btn ms-2 p-0 btn-close-white"
+            type="button"
+            data-bs-dismiss="toast"
+            aria-label="Close"
+          >
+            <span class="uil uil-times fs-1"></span>
+          </button>
+        </div>
       </div>
     </div>
   </div>
