--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,34 +16,34 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="../assets/img/favicons/apple-touch-icon.png"
+      href="/assets/img/favicons/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="../assets/img/favicons/favicon-32x32.png"
+      href="/assets/img/favicons/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../assets/img/favicons/favicon-16x16.png"
+      href="/assets/img/favicons/favicon-16x16.png"
     />
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="../assets/img/favicons/favicon.ico"
+      href="/assets/img/favicons/favicon.ico"
     />
-    <link rel="manifest" href="../assets/img/favicons/manifest.json" />
+    <link rel="manifest" href="/assets/img/favicons/manifest.json" />
     <meta
       name="msapplication-TileImage"
-      content="../assets/img/favicons/mstile-150x150.png"
+      content="/assets/img/favicons/mstile-150x150.png"
     />
     <meta name="theme-color" content="#ffffff" />
-    <script src="../vendors/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="../vendors/simplebar/simplebar.min.js"></script>
-    <script src="../assets/js/config.js"></script>
+    <script src="/vendors/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="/vendors/simplebar/simplebar.min.js"></script>
+    <script src="/assets/js/config.js"></script>
     <script>
       document.documentElement.classList.add('navbar-horizontal');
     </script>
@@ -57,31 +57,31 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&amp;display=swap"
       rel="stylesheet"
     />
-    <link href="../vendors/simplebar/simplebar.min.css" rel="stylesheet" />
+    <link href="/vendors/simplebar/simplebar.min.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
     <link
-      href="../assets/css/theme-rtl.min.css"
+      href="/assets/css/theme-rtl.min.css"
       type="text/css"
       rel="stylesheet"
       id="style-rtl"
     />
     <link
-      href="../assets/css/theme.min.css"
+      href="/assets/css/theme.min.css"
       type="text/css"
       rel="stylesheet"
       id="style-default"
     />
     <link
-      href="../assets/css/user-rtl.min.css"
+      href="/assets/css/user-rtl.min.css"
       type="text/css"
       rel="stylesheet"
       id="user-style-rtl"
     />
     <link
-      href="../assets/css/user.css"
+      href="/assets/css/user.css"
       type="text/css"
       rel="stylesheet"
       id="user-style-default"
@@ -101,9 +101,9 @@
         userLinkRTL.setAttribute('disabled', true);
       }
     </script>
-    <link href="../vendors/leaflet/leaflet.css" rel="stylesheet" />
+    <link href="/vendors/leaflet/leaflet.css" rel="stylesheet" />
     <link
-      href="../vendors/leaflet.markercluster/MarkerCluster.css"
+      href="/vendors/leaflet.markercluster/MarkerCluster.css"
       rel="stylesheet"
     />
     <link
@@ -111,9 +111,9 @@
       rel="stylesheet"
     />
     <!-- for file upload -->
-    <link href="../vendors/dropzone/dropzone.min.css" rel="stylesheet" />
+    <link href="/vendors/dropzone/dropzone.min.css" rel="stylesheet" />
     <!-- for datepicker -->
-    <link href="../vendors/flatpickr/flatpickr.min.css" rel="stylesheet" />
+    <link href="/vendors/flatpickr/flatpickr.min.css" rel="stylesheet" />
   </head>
 
   <body class="scrollbar-overlay">
