Patrol report details done edited

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -17,7 +17,7 @@
   style="display: none"
 >
   <!-- Left-side -->
-  <div class="navbar-logo">
+  <div class="navbar-logo d-print-inline-flex">
     <button
       class="btn navbar-toggler navbar-toggler-humburger-icon hover-bg-transparent"
       type="button"
@@ -48,7 +48,7 @@
 
   <!-- Middle-side -->
   <div
-    class="collapse navbar-collapse navbar-top-collapse order-1 order-lg-0 justify-content-center"
+    class="collapse navbar-collapse navbar-top-collapse order-1 order-lg-0 justify-content-center d-print-none"
     id="navbarTopCollapse"
   >
     <ul
@@ -198,7 +198,7 @@
   </div>
 
   <!-- Right-side -->
-  <ul class="navbar-nav navbar-nav-icons flex-row">
+  <ul class="navbar-nav navbar-nav-icons flex-row d-print-none">
     <!-- Theme toggle -->
     <li class="nav-item">
       <div class="theme-control-toggle fa-icon-wait px-2">
@@ -335,7 +335,7 @@
 
 <!-- Navbar Modal -->
 <div
-  class="modal fade"
+  class="modal fade d-print-none"
   id="searchBoxModal"
   tabindex="-1"
   aria-hidden="true"
