--- a/views/patrol-report-submit.ejs
+++ b/views/patrol-report-submit.ejs
@@ -381,7 +381,7 @@
         id="alertToast"
       >
         <div class="d-flex">
-          <div class="toast-body px-0 py-3">
+          <div class="toast-body p-3">
             <code class="text-white"><%= toastMsg %></code>
           </div>
 
