--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 </main>
-<footer class="footer position-absolute">
+<footer class="footer position-absolute d-print-none">
   <div class="row g-0 justify-content-between align-items-center h-100">
     <div class="col-12 col-sm-auto text-center">
       <p class="mb-0 mt-2 mt-sm-0 text-900">
@@ -53,12 +53,6 @@
     setTimeout(function() {
       // Get the specific toast by its id
       // var toast = document.getElementById('alertToast');
-
-      const myDropzone = Dropzone.forElement('#myDropzone');
-
-      if (myDropzone.getQueuedFiles().length > 0) {
-        myDropzone.processQueue();
-      }
       
       button.setAttribute('type', 'submit');
 
@@ -68,8 +62,14 @@
       // Re-enable the button and remove the loading class
       button.classList.remove('loading');
       button.disabled = false;
-    }, 1500); // 2000 milliseconds (2 seconds)
+    }, 2000); // 2000 milliseconds (2 seconds)
 
+    const myDropzone = Dropzone.forElement('#myDropzone');
+
+      if (myDropzone.getQueuedFiles().length > 0) {
+        myDropzone.processQueue();
+      }
+      
     var formElement = document.getElementById('patrolReportForm');
     formElement.submit();
   });
