--- a/views/patrol-report-details.ejs
+++ b/views/patrol-report-details.ejs
@@ -2,10 +2,17 @@
 
 <div class="content px-0 pt-9">
   <div class="row g-0">
-    <div class="col-12 col-xxl-8 px-0 bg-soft">
+    <div class="col-12 col-xxl-10 px-0 bg-soft">
       <div class="px-4 px-lg-6 pt-6 pb-9">
         <!-- top header section -->
         <div class="mb-5">
+          <nav class="mb-4" aria-label="breadcrumb">
+            <ol class="breadcrumb mb-0">
+              <li class="breadcrumb-item active">Reports</li>
+              <li class="breadcrumb-item active">Patrol Report</li>
+              <li class="breadcrumb-item active">Details</li>
+            </ol>
+          </nav>
           <div class="d-flex justify-content-between">
             <h2 class="text-black fw-bolder mb-2">Patrol Report Details</h2>
             <div class="font-sans-serif btn-reveal-trigger">
@@ -57,8 +64,8 @@
                             <h5 class="text-900 mb-0 text-nowrap">Made by :</h5>
                           </div>
                         </td>
-                        <td class="ps-1 py-1">
-                          <a class="fw-semi-bold d-block lh-sm" href="#!"
+                        <td class="py-1">
+                          <a class="fw-semi-bold d-block lh-sm ms-n2" href="#!"
                             ><%= madeBy %></a
                           >
                         </td>
@@ -74,7 +81,9 @@
                             </h5>
                           </div>
                         </td>
-                        <td class="fw-bold ps-1 py-1 text-1000">
+                        <td
+                          class="fw-bold ps-1 py-1 text-1000 badge badge badge-phoenix badge-phoenix-primary ms-2"
+                        >
                           <%= pbNumber %>
                         </td>
                       </tr>
@@ -117,24 +126,30 @@
 
         <hr />
         <h3 class="text-1100 mb-4 mt-4">Notes</h3>
-        <p class="text-800 mb-4"><%= notes %></p>
+        <p class="text-800 mb-10"><%= notes %></p>
       </div>
     </div>
 
     <div
-      class="col-12 col-xxl-4 px-0 border-start-xxl border-300 border-top-sm"
+      class="col-12 col-xxl-2 px-0 border-start-xxl border-300 border-top-sm"
     >
-      <div class="" style="height: 90vh">
-        <div class="bg-light dark__bg-1100 h-100">
+      <div class="h-100">
+        <div class="bg-light dark__bg-1100 min-vh-100">
           <div class="px-4 px-lg-6 py-4">
-            <h4 class="mb-3">Files</h4>
+            <h4 class="mb-0">Files</h4>
           </div>
+          <% if (Array.isArray(files) && files.length > 0) { %>
+          <!-- table item -->
+          <% files.forEach(function (item) { %> <% if(item.fileType === ".jpg"
+          || item.fileType === ".jepg" || item.fileType === ".gif" ||
+          item.fileType === ".bmp" ) {%>
+
           <div class="border-top border-300 px-4 px-lg-6 py-4">
             <div class="me-n3">
               <div class="d-flex flex-between-center">
                 <div class="d-flex mb-1">
                   <span class="fa-solid fa-image me-2 text-700 fs--1"></span>
-                  <p class="text-1000 mb-0 lh-1">Silly_sight_1.png</p>
+                  <p class="text-1000 mb-0 lh-1"><%= item.filename %></p>
                 </div>
                 <div class="font-sans-serif btn-reveal-trigger">
                   <button
@@ -157,19 +172,21 @@
                 </div>
               </div>
               <div class="d-flex fs--1 text-700 mb-2 flex-wrap">
-                <span>768 kb</span><span class="text-400 mx-1">| </span
-                ><a href="#!">Shantinan Mekalan </a
+                <a href="#!"><%= item.by %> </a
                 ><span class="text-400 mx-1">| </span
-                ><span class="text-nowrap">21st Dec, 12:56 PM</span>
+                ><span class="text-nowrap"><%= item.date %></span>
               </div>
               <img
                 class="rounded-2"
-                src="../../assets/img/generic/40.png"
+                id="imageDetails"
+                src="/uploads/<%= item.filename %>"
                 alt=""
-                style="max-width: 270px"
+                style="max-width: 200px"
               />
             </div>
           </div>
+          <%} else {%>
+
           <div class="border-top border-bottom border-300 px-4 px-lg-6 py-4">
             <div class="me-n3">
               <div class="d-flex flex-between-center">
@@ -181,10 +198,9 @@
                     <p class="text-1000 mb-0 lh-1">Project.txt</p>
                   </div>
                   <div class="d-flex fs--1 text-700 mb-0 flex-wrap">
-                    <span>123 kb</span><span class="text-400 mx-1">| </span
-                    ><a href="#!">Shantinan Mekalan </a
+                    <a href="#!"><%= item.by %> </a
                     ><span class="text-400 mx-1">| </span
-                    ><span class="text-nowrap">12th Dec, 12:56 PM</span>
+                    ><span class="text-nowrap"><%= item.date %></span>
                   </div>
                 </div>
                 <div class="font-sans-serif btn-reveal-trigger">
@@ -209,7 +225,20 @@
               </div>
             </div>
           </div>
-          <div class="px-5 px-md-6 mt-3 mb-9">
+          <% } %> <% }) %> <% } else { %>
+          <div class="border-top border-bottom border-300 px-4 px-lg-6 py-4">
+            <div class="me-n3">
+              <div class="d-flex flex-between-center">
+                <div>
+                  <div class="d-flex align-items-center mb-1 flex-wrap">
+                    No files uploaded
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <% } %>
+          <div class="px-5 py-3 px-md-6 mt-3 mb-9">
             <a class="fw-bold fs--1" href="#!"
               ><span class="fas fa-plus me-1"></span>Add file(s)</a
             >
