--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -116,6 +116,5 @@
     <link href="/vendors/flatpickr/flatpickr.min.css" rel="stylesheet" />
   </head>
 
-  <body class="scrollbar-overlay">
+  <body>
     <main id="top">
-  
