--- a/views/patrol-report-details.ejs
+++ b/views/patrol-report-details.ejs
@@ -142,7 +142,7 @@
           <!-- table item -->
           <% files.forEach(function (item) { %> <% if(item.fileType === ".jpg"
           || item.fileType === ".jepg" || item.fileType === ".gif" ||
-          item.fileType === ".bmp" ) {%>
+          item.fileType === ".bmp" || item.fileType === ".png" ) {%>
 
           <div class="border-top border-300 px-4 px-lg-6 py-4">
             <div class="me-n3">
