--- a/views/example.ejs
+++ b/views/example.ejs
@@ -1,23 +1,9 @@
-<%- include("partials/header") %>
-
-<main id="top">
-  <div class="row flex-center min-vh-100 py-5">
-    <div class="col-sm-10 col-md-8 col-lg-5 col-xl-5 col-xxl-3">
-      <div>
-        <label for="imgURL">Image URL</label>
-        <% const imgURLError = getInputError('imgURL'); %>
-        <input
-          type="text"
-          class="form-control <%= imgURLError ? 'is-invalid' : '' %>"
-          id="imgURL"
-          required
-        />
-        <% if (imgURLError) { %>
-        <div class="invalid-feedback"><%= imgURLError.msg %></div>
-        <% } %>
-      </div>
-    </div>
-  </div>
-</main>
-
-<%- include("partials/footer") %>
+<div class="hover-actions top-0 end-0 mt-4 me-4">
+  <button
+    class="btn btn-primary btn-icon flex-shrink-0"
+    data-bs-toggle="modal"
+    data-bs-target="#schedule-modal-2"
+  >
+    <span class="fa-solid fa-chevron-right"></span>
+  </button>
+</div>
