Schedule & Patrol Report done

--- a/views/patrol-report-submit.ejs
+++ b/views/patrol-report-submit.ejs
@@ -148,6 +148,12 @@
                       </div>
                     </div>
                   </div>
+                  <input
+                    type="text"
+                    style="display: none"
+                    value="<%= reportId %>"
+                    name="fileReportId"
+                  />
                 </form>
 
                 <!-- form >form tag will be merge with file uploader form tag -->
@@ -309,6 +315,13 @@
                       Please enter a note here.
                     </div>
                   </div>
+
+                   <input
+                    type="text"
+                    style="display: none"
+                    value="<%= reportId %>"
+                    name="confirmRid"
+                  />
 
                   <!-- Submit button -->
                   <div class="col-12">
