--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -74,84 +74,21 @@
           aria-expanded="false"
           ><span class="uil fs-0 me-2 uil-cube"></span>Reports</a
         >
-        <!--Reports dropdown hover  -->
+        <!--Social dropdown hover  -->
         <ul class="dropdown-menu navbar-dropdown-caret">
-          <!-- Dropdown hover child-1 -->
-          <li class="dropdown">
-            <a
-              class="dropdown-item dropdown-toggle"
-              id="daily-report"
-              href="#"
-              data-bs-toggle="dropdown"
-              data-bs-auto-close="outside"
-            >
+          <li>
+            <a class="dropdown-item" href="/patrol-report/view">
               <div class="dropdown-item-wrapper">
-                <span
-                  class="uil fs-0 uil-angle-right lh-1 dropdown-indicator-icon"
-                ></span
-                ><span
-                  ><span class="me-2 uil" data-feather="book"></span>Patrol
-                  Report</span
-                >
+                <span class="me-2 uil" data-feather="book"></span>Patrol Report
               </div>
             </a>
-
-            <!-- Hover popover child-1-1 -->
-            <ul class="dropdown-menu">
-              <li>
-                <a class="dropdown-item" href="/patrol-report/submit">
-                  <div class="dropdown-item-wrapper">
-                    <span class="me-2 uil"></span>Submit
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="/patrol-report/view">
-                  <div class="dropdown-item-wrapper">
-                    <span class="me-2 uil"></span>View
-                  </div>
-                </a>
-              </li>
-            </ul>
           </li>
-
-          <!-- Dropdown hover child-2 -->
-          <li class="dropdown">
-            <a
-              class="dropdown-item dropdown-toggle"
-              id="case-report"
-              href="#"
-              data-bs-toggle="dropdown"
-              data-bs-auto-close="outside"
-            >
+          <li>
+            <a class="dropdown-item" href="/case-report/view">
               <div class="dropdown-item-wrapper">
-                <span
-                  class="uil fs-0 uil-angle-right lh-1 dropdown-indicator-icon"
-                ></span
-                ><span
-                  ><span class="me-2 uil" data-feather="flag"></span>Case
-                  Report</span
-                >
+                <span class="me-2 uil" data-feather="flag"></span>Case Report
               </div>
             </a>
-
-            <!-- Hover popover child-2-1 -->
-            <ul class="dropdown-menu">
-              <li>
-                <a class="dropdown-item" href="/case-report/submit">
-                  <div class="dropdown-item-wrapper">
-                    <span class="me-2 uil"></span>Submit
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="/case-report/view">
-                  <div class="dropdown-item-wrapper">
-                    <span class="me-2 uil"></span>View
-                  </div>
-                </a>
-              </li>
-            </ul>
           </li>
         </ul>
       </li>
